[Commerce] QA bugs for dropdown and horizontal scrolling (#542)
* [Commerce] Add carousel buttons

* [Commerce] QA bugs for dropdown and horizontal scrolling

* Reset default select styling with appearance:none (vendor prefixes
added on build)
* Adjust size of hr in footer causing horizontal scrolling on mobile

* [Commerce] Move footer margin style from CSS to HTML

* [Commerce] Align product listings grid

* [Commerce] Remove navbar z-index override

* [Commerce] Apply 100% width with bassCSS

* [Commerce] Adjust blog listing header, re-align product grid, reduce content max-width

--- a/css/templates/e-commerce/page.css
+++ b/css/templates/e-commerce/page.css
@@ -128,7 +128,7 @@ dd:after {
 }
 
 .commerce-select {
-  -webkit-appearance: none;
+  appearance: none;
   border: none;
   border-radius: 0;
   background: none;
@@ -297,7 +297,6 @@ amp-selector [option][selected] {
   color: var(--color-font-accent);
   padding-right: var(--space-2);
   background-color: var(--color-white);
-  z-index: var(--z1);
   height: var(--navbar-height);
   box-shadow: none;
   border-bottom: 1px solid #f3f3f3;
